Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8225

Manually adding a new Qt version fails silently if compiler is incompatible

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 2.6.1
    • Qt Creator 2.6.0
    • None
    • Windows 7 32-bit
      MinGW GCC 4.7 in PATH
    • 5bd251e8052a262e30d4a6fced86d5217c455a5e

    Description

      From http://qt-project.org/forums/viewthread/21404/

      Scenario
      Previously, I manually added Qt 4.8.3 and MinGW GCC 4.4 into Qt Creator (neither are in my PATH)

      I built Qt 5 from source, using MinGW GCC 4.7 in my PATH. Then, I tried to add qmake.exe to Qt Creator

      Main Issue
      The attempt to register my newly-built Qt 5 failed silently. Qt Creator did not:

      1. Register my new qmake.exe, or
      2. Provide an error message

      (I'd expect (1) to happen, and (2) as a fall-back... but neither happened)

      Workaround
      Removed MinGW GCC 4.4 from Tools -> Options -> Build & Run -> Compilers. Qt Creator then registered my new qmake.exe as expected.

      Further issues
      After that, I re-added MinGW GCC 4.4 and restarted Qt Creator. But, my Qt 5 installation was flagged as faulty, and Qt Creator said

      qmake does not exist or is not executable

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            jksh Sze Howe Koh
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes