Win: Do fail less often when adding mingw Qt versions

Task-number: QTCREATORBUG-8225

Change-Id: I7b5db59ef7967a074e07ae87deff90235190aaa9
Reviewed-by: Daniel Teske <daniel.teske@digia.com>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>